refactor: list orders controller
