# src/shared/infra/http/routes/orders.routes.ts
@@ -3,10 +3,10 @@ import { CreateOrderController } from "@modules/orders/useCases/createOrder/Crea
 import { DeleteOrderController } from "@modules/orders/useCases/deleteOrder/DeleteOrderController";
 import { EditOrderController } from "@modules/orders/useCases/editOrderUseCase/EditOrderController";
 import { ListOrdersController } from "@modules/orders/useCases/listOrders/listOrdersController";
-import { ListOrdersByUserController } from "@modules/orders/useCases/listOrdersByUser/listOrdersByUserController";
 import { Router } from "express";
 
 import { ensureAdmin } from "../middlewares/ensureAdmin";
+import { ensureAdminForAllScope } from "../middlewares/ensureAdminForAllScope";
 import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
 
 export const orderRoutes = Router();
@@ -15,22 +15,16 @@ const createOrderController = new CreateOrderController();
 const deleteOrderController = new DeleteOrderController();
 const editOrderController = new EditOrderController();
 const listOrdersController = new ListOrdersController();
-const listOrdersByUserController = new ListOrdersByUserController();
 const concludeOrderController = new ConcludeOrderController();
 
 orderRoutes.post("/", ensureAuthenticated, createOrderController.handle);
 orderRoutes.put("/:id", ensureAuthenticated, editOrderController.handle);
 orderRoutes.delete("/:id", ensureAuthenticated, deleteOrderController.handle);
 orderRoutes.get(
-  "/list/all/:pageNumber/:pageSize",
+  "/",
   ensureAuthenticated,
-  ensureAdmin,
+  ensureAdminForAllScope,
   listOrdersController.handle
-);
-orderRoutes.get(
-  "/user/list/:pageNumber/:pageSize",
-  ensureAuthenticated,
-  listOrdersByUserController.handle
 );
 orderRoutes.put(
   "/:id/conclude",
